--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 html body {
     width: auto;
     height: auto;
-    background: #f0fff0;
-    font-family: 'Courier New', Courier, monospace;  
+    background: #ffffff;
+    font-family: 'Titillium Web', sans-serif;  
 }
 .container{
     width: auto;
@@ -34,17 +34,17 @@ html body {
 .namedesign{
     padding-top: 50px;
 }
-#nameheading{
+.namedesign h1{
     font-size: 100px;
     text-align: center;
     color: #2e8b57;
     margin-bottom: 0%;
 }
-#namesubheading{
+.namedesign p{
     margin-top: 0%;
     font-size: 25px;
     text-align: center;
-    color: #2e8b57;
+    color: #121212;
 }
 .Home{
     width: auto;
@@ -53,13 +53,15 @@ html body {
     padding-top: 100px;
     padding-right: 100px;
     align-items: center;
+    padding-bottom: 125px;
 }
-#description{
+.Home span{
     color:#2e8b57;
+}
+.Home h1{
+    color: #121212;
     float: left;
     padding-top: 100px;
-    
-    
 }
 .ProfileImg{
     float: right;
@@ -73,11 +75,12 @@ html body {
     height: 800px;
     margin: auto;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 #PortfolioText{
     font-size: 50px;
     text-align: center;
-    color: #2e8b57;
+    color: #121212;
 }
 .PortfolioCard img{
     width: 90%;
@@ -94,18 +97,21 @@ html body {
     float: left;
     margin: 10px;
 }
-.Skills h1{
+.projectDesc h4{
+    color: #2e8b57;
+    font-size: large;
+}
+#SkillsText{
     font-size: 50px;
     text-align: center;
-    color: #2e8b57;
+    color: #121212;
 }
 .Skills{
-    padding-top: 50px;
     width: auto;
     height: 800px;
 }
 .Skills h2{
-    color:#2e8b57;
+    color:#121212;
     font-size: 20px;
 
 }
@@ -123,24 +129,34 @@ html body {
     padding: 0.5%;
     font-size: 20px;
     border-radius: 100px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4); 
 }
 .java{
     width: 99%;
 }
 .javascript{
-    width: 30%;
+    width: 50%;
 }
 .html{
     width: 70%;
 }
 .css{
-    width: 50%;
+    width: 30%;
 }
 footer{
-    width: auto;
-    height: 300px;
+    width: 100%;
+    height: 200px;
     text-align: center;
-    color:#2e8b57
+    color: black;
+    background-color: #2e8b57;
+    left: 0%;
+    
+    position:absolute;
+}
+.Socials img{
+    margin-right: 10px;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
     
 }
