--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,116 @@
-html body {
-    width: auto;
-    height: auto;
-    background: #ffffff;
+:root{
+    font-size: 16px;
     font-family: 'Nunito', sans-serif;
-    
+    --bg-primary: #121212;
+    --bg-secondary: #7c808d;
+    --navbar-color: #212121;
+    --text-primary: #50C878;
 }
-.container{
-    position: relative;
-    width: auto;
-    height: auto;
-    margin-left: 250px;
-    margin-right: 250px;
+html, body{
+    margin: 0%;
+    padding: 0%;
+    overflow-x:hidden;
+    background-color: var(--bg-primary);
 }
-.navmenu{
-    position: relative;
-    overflow: hidden;
-    height: 50px;
+main{
+    margin-left: 5rem;
+    padding: 1rem;
 }
-::-webkit-scrollbar {
-    width: 5px;
+body::-webkit-scrollbar {
+    width: 0.25rem;
   }
-::-webkit-scrollbar-track {
+body::-webkit-scrollbar-track {
     background: #f1f1f1;
   }
-::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb {
     background: #2e8b57;
     border-radius: 50px;
   }
-.logo{
-    position: relative;
-    padding-top: 7px;
-    width: 30px;
-    height: 30px;
+.navbar {
+    width: 5rem;
+    height: 100vh;
+    position: fixed;
+    background-color: var(--navbar-color);
+    transition: 200ms ease-in;
+}
+.navbar-nav{
+    list-style: none;
+    padding: 0%;
+    margin: 0%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+}
+.nav-item{
+    width: 100%;
+}
+.nav-link{
+    display: flex;
+    align-items: center;
+    height: 5rem;
+    text-decoration: none;
+    color: var(--text-primary);
+    filter:opacity(0.7);
+    transition: 600ms;
+}
+#middlecomp{
+    padding-left: 5px;
+    width: 32px;
+}
+#skills{
+    padding-left: 4px;
+}
+.nav-item:nth-last-child(2){
+    margin-top: auto;
+}
+
+.nav-link:hover{
+    filter: grayscale(0%) opacity(1);
+    background: var(--bg-primary);
+    color:var(--text-primary)
+}
+.link-text{
+    display: none;
+    margin: 1rem;
+}
+.nav-link span{
+    min-width: 2rem;
+    margin: 0 1.25rem;
+}
+.navbar:hover{
+    width: 16rem;
+}
+.navbar:hover .link-text{
+    display: block;
+}
+
+.navlink img{
+    min-width: 2rem;
+    margin: 0 1.25rem;
     cursor: pointer;
 }
+#file{
+    padding-left: 8px;
+}
+.logo{
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+    color: var(--text-primary);
+}
+.logo span{
+    font-size: 30px;
+    font-weight: bolder;
+    letter-spacing: 0.45rem;
+    transition: 600ms ease;
+}
+.logo h1{
+    padding-top: 12px;
+    font-size: 50px;
+}
+
 .namedesign{
     margin-top: 200px;
     position: relative;
@@ -41,129 +118,28 @@ html body {
 .Home{
     position: relative;
     width: auto;
-    height: 350px;
-    padding-top: 225px;
-    padding-left: 100px;
-    padding-right: 100px;
-    padding-bottom: 300px;
+    height: 100%;
     text-align: center;
 }
 .Home span{
     color:#2e8b57;
 }
 .Home h1{
+    padding-top: 200px;
     font-size: 100px;
     text-align: center;
     margin: 0%;
-    color: #2e8b57;
+    color: var(--text-primary)
 }
 .Home h2{
-    color: #121212;
+    color: var(--text-primary);
     padding-top: 50px;
-    text-align: left;
-}
-.ProfileImg{
-    border-radius: 50%;
-    width: 350px;
-    height: 350px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
+    text-align: center;
+    
 }
 .Home img{
     padding: 10px;
     width: 30px;
     height: 30px;
 }
-img:hover {
-    transform: scale(1.05);
-  }
-.Portfolio{
-    position: relative;
-    width: 960px;
-    height: 800px;
-    margin: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-#PortfolioText{
-    position: relative;
-    font-size: 50px;
-    text-align: center;
-    color: #121212;
-}
-.PortfolioCard img{
-    position: relative;
-    width: 90%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
-}
-.PortfolioCard{
-    position: relative;
-    height: 350px;
-    padding-top: 15px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6);
-    transition: 0.4s;
-    width: 300px;
-    background: #fff;
-    text-align: center;
-    float: left;
-    margin: 10px;
-}
-.projectDesc h4{
-    position: relative;
-    color: #2e8b57;
-    font-size: large;
-}
-#SkillsText{
-    position: relative;
-    font-size: 50px;
-    text-align: center;
-    color: #121212;
-}
-.Skills{
-    position: relative;
-    width: auto;
-    height: 800px;
-}
-.Skills h2{
-    position: relative;
-    color:#121212;
-    font-size: 20px;
 
-}
-.Skillset{
-    position: relative;
-    float: right;
-    background-color: rgb(192, 192, 192);
-    width: 100%;
-    border-radius: 100px;
-    margin-bottom: 50px;
-}
-.skill{
-    background-color: #2e8b57;
-    color: #121212;
-    text-align: right;
-    padding: 0.5%;
-    font-size: 20px;
-    border-radius: 100px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4); 
-}
-.java{
-    width: 99%;
-}
-.javascript{
-    width: 50%;
-}
-.html{
-    width: 70%;
-}
-.css{
-    width: 30%;
-}
-footer{
-    width: 100%;
-    height: 200px;
-    text-align: center;
-    color: black;
-    background-color: #2e8b57;
-    left: 0%;
-    position:absolute;
-}
