--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,49 @@
 :root{
     font-size: 16px;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Staatliches', cursive;
     --bg-primary: #121212;
     --bg-secondary: #7c808d;
     --navbar-color: #212121;
-    --text-primary: #50C878;
+    --text-primary: #057409;
+    --text-secondary: #bbbbbb;
 }
 html, body{
     margin: 0%;
     padding: 0%;
     overflow-x:hidden;
     background-color: var(--bg-primary);
+    cursor: none;
+}
+.cursor{
+    z-index: 5;
+    pointer-events: none;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    position: absolute;
+    transform: translate3d(-50%, -50%, 0);
+    top: 0;
+    left: 0;
+    background-color: var(--text-primary);
+    
+}
+.cursor-lazy{
+    z-index: 5;
+    pointer-events: none;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 2px solid var(--text-primary);
+    position: absolute;
+    transform: translate3d(-50%, -50%, 0);
+    top: 0;
+    left: 0;
+    transition: 0.1s ease-out;
+    
 }
 main{
     margin-left: 5rem;
-    padding: 1rem;
+    padding-bottom: 0%;
 }
 body::-webkit-scrollbar {
     width: 0.25rem;
@@ -27,6 +56,7 @@ body::-webkit-scrollbar-thumb {
     border-radius: 50px;
   }
 .navbar {
+    z-index: 4;
     width: 5rem;
     height: 100vh;
     position: fixed;
@@ -64,11 +94,11 @@ body::-webkit-scrollbar-thumb {
 .nav-item:nth-last-child(2){
     margin-top: auto;
 }
-
 .nav-link:hover{
     filter: grayscale(0%) opacity(1);
     background: var(--bg-primary);
-    color:var(--text-primary)
+    color:var(--text-primary);
+    transform: scale(1.04);
 }
 .link-text{
     display: none;
@@ -84,7 +114,6 @@ body::-webkit-scrollbar-thumb {
 .navbar:hover .link-text{
     display: block;
 }
-
 .navlink img{
     min-width: 2rem;
     margin: 0 1.25rem;
@@ -110,36 +139,166 @@ body::-webkit-scrollbar-thumb {
     padding-top: 12px;
     font-size: 50px;
 }
-
-.namedesign{
-    margin-top: 200px;
-    position: relative;
-}
-.Home{
-    position: relative;
-    width: auto;
-    height: 100%;
-    text-align: center;
-}
-.Home span{
-    color:#2e8b57;
-}
-.Home h1{
-    padding-top: 200px;
-    font-size: 100px;
-    text-align: center;
-    margin: 0%;
-    color: var(--text-primary)
-}
-.Home h2{
-    color: var(--text-primary);
-    padding-top: 50px;
-    text-align: center;
+.context {
+    width: 100%;
+    position: absolute;
+    top:50vh;
     
 }
-.Home img{
-    padding: 10px;
-    width: 30px;
-    height: 30px;
+.context h1{
+    text-align: center;
+    color: #fff;
+    font-size: 50px;
 }
+.area{
+    
+    background: var(--bg-primary);  
+    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+    width: 100%;
+    height:100vh;
+}
+.circles{
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-top: 0%;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.circles li{
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    animation: animate 25s linear infinite;
+    bottom: -150px;
+    
+}
+.circles li:nth-child(1){
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+.circles li:nth-child(2){
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+.circles li:nth-child(3){
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+.circles li:nth-child(4){
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+.circles li:nth-child(5){
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+.circles li:nth-child(6){
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+.circles li:nth-child(7){
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+.circles li:nth-child(8){
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+.circles li:nth-child(9){
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+.circles li:nth-child(10){
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+}
+@keyframes animate {
 
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+
+}
+.Home{
+    position: absolute;
+    padding-left: 10vh;
+    top: 0px;
+    left: 0px;
+    padding-bottom: 0%;
+    width: auto;
+    height: auto;
+}
+.Home span{
+    color:var(--text-secondary);
+}
+.Home h1{
+    padding-top: 6vh;
+    padding-left: 10vw;
+    font-size: 7vw;
+    font-weight: bolder;
+    text-align: left;
+    color: var(--text-primary);
+    margin-bottom: 0%;
+    letter-spacing: 0.5rem;
+}
+.Home h2{
+    padding-left: 10vw;
+    font-size: 1.3vw;
+    color: var(--text-primary);
+    text-align: justify;
+    letter-spacing: 0.25rem;
+    width: 45vw;
+}
+#AboutMe{
+    margin-top: 7vw;
+    padding-left: 10vw;
+    letter-spacing: 0.5rem;
+    color: var(--text-primary);
+    font-size: 2.5vw;
+}
+.Home p{
+    padding-left: 10vw;
+    font-size: 1vw;
+    color: var(--text-primary);
+    text-align: justify;
+    letter-spacing: 0.25rem;
+    width: 45vw;
+}
