--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ html, body{
     overflow-x:hidden;
     background-color: var(--bg-primary);
     cursor: none;
+    
 }
 .cursor{
     height: 15px;
@@ -44,6 +45,7 @@ html, body{
 main{
     margin-left: 5rem;
     padding-bottom: 0%;
+    animation: transitionIn 1s;
 }
 body::-webkit-scrollbar {
     width: 0.25rem;
@@ -314,6 +316,11 @@ body::-webkit-scrollbar-thumb {
     margin-left: 5rem;
     margin-top: 10rem;
 }
+.card img{
+    padding: -1.5%;
+    width: 100%;
+    border-radius: 16px;
+}
 .card{
     display: flex;
     position: relative;
@@ -324,13 +331,52 @@ body::-webkit-scrollbar-thumb {
     height: 350px;
     width: 300px;
     min-width: 250px;
-    padding: 1.5rem;
     background: #212121;
-
     border-radius: 16px;
-    box-shadow: 1px 1px  black ;
+    box-shadow: 3px 3px  black ;
     transition: .2s;
 }
 .card:hover{
     transform: translateY(-1rem);
+}
+.card header{
+    text-align: center;
+    color: var(--text-primary);
+}
+.card header h1{
+    letter-spacing: 0.2rem;
+    margin: 0%;
+    font-size: 30px;
+}
+.card footer{
+    height: 50px; 
+}
+footer{
+    display: inline-flex;
+    align-items: center;
+    padding-left: 20px;
+    gap: 5px;
+}
+footer .tag{
+    background: rgb(199, 199, 199);
+    border-radius: 50px;
+    font-size: 12px;
+    margin: 0;
+    color: var(--text-primary);
+    padding: 2px 10px;
+    text-transform: uppercase;
+}
+footer span:last-child{
+    margin-left: auto;
+    padding-right: 20px;
+}
+@keyframes transitionIn{
+    from {
+        opacity: 0;
+        transform: rotateX(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: rotateX(0px);
+    }
 }
