--- a/styles.css
+++ b/styles.css
@@ -1,382 +1,237 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 :root{
-    font-size: 16px;
-    font-family: 'Staatliches', cursive;
-    --bg-primary: #121212;
-    --bg-secondary: #7c808d;
-    --navbar-color: #212121;
-    --text-primary: #057409;
-    --text-secondary: #bbbbbb;
-}
-html, body{
-    margin: 0%;
-    padding: 0%;
-    overflow-x:hidden;
-    background-color: var(--bg-primary);
-    cursor: none;
-    
-}
-.cursor{
-    height: 15px;
-    width: 15px;
-    position: fixed;
-    transform: translate(0px, 0px);
-    background-color: var(--text-primary);
-    border-radius: 50%;
-    transition: height .3s cubic-bezier(0.46,0.03,0.52,0.96), width .3s cubic-bezier(0.46,0.03,0.52,0.96);
-    z-index: 5000;
-    pointer-events: none;
-    left: 5px;
-    top: 10px;
-}
-.cursor-lazy{
-    height: 40px;
-    width:  40px;
-    border-radius: 50%;
-    border: 2px solid var(--text-primary);
-    background-color: transparent;
-    position: fixed;
-    z-index: 5000;
-    transform: translate(0px, 0px);
-    pointer-events: none;
-    opacity: 0.5;
-    left: 5px;
-    top: 10px;
-}
-main{
-    margin-left: 5rem;
-    padding-bottom: 0%;
-    animation: transitionIn 1s;
-}
-body::-webkit-scrollbar {
-    width: 0.25rem;
-  }
-body::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-body::-webkit-scrollbar-thumb {
-    background: #2e8b57;
-    border-radius: 50px;
-  }
-.navbar {
-    z-index: 4;
-    width: 5rem;
-    height: 100vh;
-    position: fixed;
-    background-color: var(--navbar-color);
-    transition: 200ms ease-in;
-    cursor: none;
-}
-.navbar-nav{
-    list-style: none;
-    padding: 0%;
-    margin: 0%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-}
-.nav-item{
+    margin: 0;
+    padding: 0;
     width: 100%;
+    height: 1000vh;
+    --Navy: #202A44;
+    --DarkNavy: #0a0d16;
+    --EmeraldGreen: #009B77;
+    --PrimaryText: rgba(255, 255, 255, 0.897);
+    --SecondaryText: #c8ccc5;
+    background-color: var(--Navy);
+    font-family: "Montserrat", sans-serif;
+    scroll-behavior: smooth;
 }
-.nav-link{
+.Logo{
+    padding: 10px 21.5px;
     display: flex;
     align-items: center;
-    height: 5rem;
-    text-decoration: none;
-    color: var(--text-primary);
-    filter:opacity(0.7);
-    transition: 600ms;
-    cursor: none;
 }
-#middlecomp{
-    padding-left: 5px;
-    width: 32px;
-}
-#skills{
-    padding-left: 4px;
-}
-.nav-item:nth-last-child(2){
-    margin-top: auto;
-}
-.nav-link:hover{
-    filter: grayscale(0%) opacity(1);
-    background: var(--bg-primary);
-    color:var(--text-primary);
-    transform: scale(1.04);
-}
-.link-text{
-    display: none;
-    margin: 1rem;
-}
-.nav-link span{
-    min-width: 2rem;
-    margin: 0 1.25rem;
-}
-.navbar:hover{
-    width: 16rem;
-}
-.navbar:hover .link-text{
-    display: block;
-}
-.navlink img{
-    min-width: 2rem;
-    margin: 0 1.25rem;
-    cursor: pointer;
-}
-#file{
-    padding-left: 8px;
-}
-.logo{
-    width: 100%;
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 1rem;
-    color: var(--text-primary);
-}
-.logo span{
-    font-size: 30px;
-    font-weight: bolder;
-    letter-spacing: 0.45rem;
-    transition: 600ms ease;
-}
-.logo h1{
-    padding-top: 12px;
-    font-size: 50px;
-}
-.context {
-    width: 100%;
-    position: absolute;
-    top:50vh;
+.Logo h2{
     
+    justify-content: center;
+    margin: 20px;
+    color: var(--SecondaryText);
 }
-.context h1{
-    text-align: center;
-    color: #fff;
-    font-size: 50px;
-}
-.area{
-    
-    background: var(--bg-primary);  
-    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
-    width: 100%;
-    height:100vh;
-}
-.circles{
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin-top: 0%;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-.circles li{
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 20px;
-    height: 20px;
-    background: rgba(255, 255, 255, 0.2);
-    animation: animate 25s linear infinite;
-    bottom: -150px;
-    
-}
-.circles li:nth-child(1){
-    left: 25%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0s;
-}
-.circles li:nth-child(2){
-    left: 10%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 2s;
-    animation-duration: 12s;
-}
-.circles li:nth-child(3){
-    left: 70%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 4s;
-}
-.circles li:nth-child(4){
-    left: 40%;
-    width: 60px;
-    height: 60px;
-    animation-delay: 0s;
-    animation-duration: 18s;
-}
-.circles li:nth-child(5){
-    left: 65%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 0s;
-}
-.circles li:nth-child(6){
-    left: 75%;
-    width: 110px;
-    height: 110px;
-    animation-delay: 3s;
-}
-.circles li:nth-child(7){
-    left: 35%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 7s;
-}
-.circles li:nth-child(8){
-    left: 50%;
-    width: 25px;
-    height: 25px;
-    animation-delay: 15s;
-    animation-duration: 45s;
-}
-.circles li:nth-child(9){
-    left: 20%;
-    width: 15px;
-    height: 15px;
-    animation-delay: 2s;
-    animation-duration: 35s;
-}
-.circles li:nth-child(10){
-    left: 85%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 0s;
-    animation-duration: 11s;
-}
-@keyframes animate {
-
-    0%{
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-        border-radius: 0;
-    }
-
-    100%{
-        transform: translateY(-1000px) rotate(720deg);
-        opacity: 0;
-        border-radius: 50%;
-    }
-
-}
-.Home{
-    position: absolute;
-    padding-left: 10vh;
-    top: 0px;
-    left: 0px;
-    padding-bottom: 0%;
+nav
+{
+    position: fixed;
+    top: 5vh;
+    left: 38.5vw;
     width: auto;
-    height: auto;
+    display: table;
+    margin: 0 auto;
+    transform: translateY(-50%);
 }
-.Home span{
-    color:var(--text-secondary);
+
+nav a
+{
+    position: relative;
+    width: auto;
+    display: table-cell;
+    text-align: center;
+    color: var(--SecondaryText);
+    text-decoration: none;
+    font-weight: bold;
+    padding: 10px 20px;
+    transition: 0.15s;
+}
+
+nav a:before
+{
+    top: 0;
+    left: 10px;
+    width: 6px;
+    height: 6px;
+}
+
+nav a:after
+{
+    top: 5px;
+    left: 18px;
+    width: 4px;
+    height: 4px
+}
+
+nav a:hover
+{
+    color: var(--EmeraldGreen);
+    transform: scale(1.1);
+}
+
+nav a:nth-child(1):hover ~ #indicator
+{
+    background: var(--EmeraldGreen);
+    transform: scale(1.1);
+}
+nav a:nth-child(2):hover ~ #indicator
+{
+    left: 25%;
+    background: var(--EmeraldGreen);
+    transform: scale(1.1);
+}
+nav a:nth-child(3):hover ~ #indicator
+{
+    left: 48%;
+    background: var(--EmeraldGreen);
+    transform: scale(1.1);
+}
+nav a:nth-child(4):hover ~ #indicator
+{
+    left: 80%;
+    background: var(--EmeraldGreen);
+    transform: scale(1.1);
+}
+
+
+.SocialNav{
+    height: 30vh;
+    width: auto;
+    position: fixed;
+    bottom: 0%;
+}
+#fix{
+    padding-left: 2px;
+    padding-right: 2px;
+}
+.SocialList{
+    list-style-type: none;
+}
+.SocialList i{
+    margin-bottom: 5vh;
+    color: var(--SecondaryText);
+    transition: 0.15s;
+}
+.SocialList i:hover{
+    color: var(--EmeraldGreen);
+    transform: scale(1.15);
+}
+
+.Home{
+    width: auto;
+    text-align: center;
 }
 .Home h1{
-    padding-top: 6vh;
-    padding-left: 10vw;
-    font-size: 7vw;
-    font-weight: bolder;
-    text-align: left;
-    color: var(--text-primary);
-    margin-bottom: 0%;
-    letter-spacing: 0.5rem;
+    padding-top: 5vw;
+    padding-bottom: 48vh;
+    font-size: 8vw;
+    color: var(--EmeraldGreen);
+    text-shadow: 10px 10px var(--DarkNavy);
 }
-.Home h2{
-    padding-left: 10vw;
-    font-size: 1.3vw;
-    color: var(--text-primary);
-    text-align: justify;
-    letter-spacing: 0.25rem;
-    width: 45vw;
-}
-#AboutMe{
-    margin-top: 7vw;
-    padding-left: 10vw;
-    letter-spacing: 0.5rem;
-    color: var(--text-primary);
-    font-size: 2.5vw;
-}
-.Home p{
-    padding-left: 10vw;
-    font-size: 1vw;
-    color: var(--text-primary);
-    text-align: justify;
-    letter-spacing: 0.25rem;
-    width: 45vw;
-}
-.card-list{
-    display: flex;
-    top: 0%;
-    left: 0%;
+.arrow{
     position: absolute;
-    width: 100%;
-    justify-content: center;
-    margin-left: 5rem;
-    margin-top: 10rem;
+    width: 50px;
+    height: 50px;
+    top: 90%;
+    left: 50%;
+    transform: translate(-25%,-25%);
 }
-.card img{
-    padding: -1.5%;
-    width: 100%;
-    border-radius: 16px;
+.arrow span{
+    margin-left: 13px;
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-bottom: 3px solid var(--EmeraldGreen);
+    border-right: 3px solid var(--EmeraldGreen);
+    transform: rotate(45deg);
+    animation: animate 1.5s infinite;
 }
-.card{
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    margin-left: 20px;
-    top: 0%;
-    left: 0%;
-    height: 350px;
-    width: 300px;
-    min-width: 250px;
-    background: #212121;
-    border-radius: 16px;
-    box-shadow: 3px 3px  black ;
-    transition: .2s;
+.arrow span:nth-child(2){
+    animation-delay: -0.2s;
 }
-.card:hover{
-    transform: translateY(-1rem);
+.arrow span:nth-child(3){
+    animation-delay: -0.4s;
 }
-.card header{
-    text-align: center;
-    color: var(--text-primary);
+.arrow2{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 197%;
+    left: 50%;
+    transform: translate(-25%,-25%);
 }
-.card header h1{
-    letter-spacing: 0.2rem;
-    margin: 0%;
-    font-size: 30px;
+.arrow2 span{
+    margin-left: 13px;
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-bottom: 3px solid var(--EmeraldGreen);
+    border-right: 3px solid var(--EmeraldGreen);
+    transform: rotate(45deg);
+    animation: animate 1.5s infinite;
 }
-.card footer{
-    height: 50px; 
+.arrow2 span:nth-child(2){
+    animation-delay: -0.2s;
 }
-footer{
-    display: inline-flex;
-    align-items: center;
-    padding-left: 20px;
-    gap: 5px;
+.arrow2 span:nth-child(3){
+    animation-delay: -0.4s;
 }
-footer .tag{
-    background: rgb(199, 199, 199);
-    border-radius: 50px;
-    font-size: 12px;
-    margin: 0;
-    color: var(--text-primary);
-    padding: 2px 10px;
-    text-transform: uppercase;
-}
-footer span:last-child{
-    margin-left: auto;
-    padding-right: 20px;
-}
-@keyframes transitionIn{
-    from {
+@keyframes animate {
+    0%{
         opacity: 0;
-        transform: rotateX(-10px);
+        transform: rotate(45deg) translate(-20px,-20px);
     }
-    to {
+    50%{
         opacity: 1;
-        transform: rotateX(0px);
     }
+    100%{
+        opacity: 0;
+        transform: rotate(45deg) translate(20px,20px);
+    }
+}
+.about{
+    width: auto;
+}
+.Header{
+    text-align: center;
+    padding-top: 5vw;
+    font-size: 4vw;
+    color: var(--EmeraldGreen);
+    text-shadow: 5px 5px var(--DarkNavy);
+}
+.aboutDesc{
+    padding-left: 17vw;
+    padding-right: 17vw;
+}
+.aboutDesc h1{
+    margin-top: -2.5vw;
+    font-size: 4vw;
+    color: var(--EmeraldGreen);
+    text-shadow: 5px 5px var(--DarkNavy);
+}
+.aboutDesc h3{
+    font-size: 2vw;
+    color: var(--SecondaryText);
+}
+.aboutDesc span{
+    color: var(--EmeraldGreen);
+    text-shadow: 3px 3px var(--DarkNavy);
+}
+.aboutDesc h4{
+    font-size: 1.25vw;
+    color: var(--SecondaryText);
+    padding-bottom: 10vw;
+}
+.aboutDesc h2{
+    font-size: 2.5vw;
+    color: var(--EmeraldGreen);
+    text-shadow: 5px 5px var(--DarkNavy);
+}
+.Header{
+    text-align: center;
+    padding-top: 5vw;
+    font-size: 4vw;
+    color: var(--EmeraldGreen);
+    text-shadow: 5px 5px var(--DarkNavy);
 }
